--- a/dos33.html
+++ b/dos33.html
@@ -392,35 +392,35 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 <a class="macro" name="DIAGMOD">DIAGMOD     </a>EQU  0
                     006 <a class="macro" name="DOS33B" >DOS33B      </a>EQU  1
                     007 <a class="macro" name="ULC"    >ULC         </a>EQU  0
-                    008             INCLUDE <a href="#RELOCTR">RELOCTR</a>,,2                              ; $1B00 .. $####
-                    009             INCLUDE <a href="#DOSINIT">DOSINIT</a>,,2                              ; $#### .. $####
-                    010             INCLUDE <a href="#DOSHOOK">DOSHOOK</a>,,2                              ; $#### .. $####
-                    011             INCLUDE <a href="#CMDSCAN">CMDSCAN</a>,,2                              ; $#### .. $####
-                    012             INCLUDE <a href="#XOPNCLS">XOPNCLS</a>,,2                              ; $#### .. $####
-                    013             INCLUDE <a href="#XLODSAV">XLODSAV</a>,,2                              ; $#### .. $####
-                    014             INCLUDE <a href="#XMISCMD">XMISCMD</a>,,2
-                    015             INCLUDE <a href="#DOSGOER">DOSGOER</a>,,2
-                    016             INCLUDE <a href="#BLDFTAB">BLDFTAB</a>,,2                              ; Page   4, Lines 144, $#### .. $####
-                    017             INCLUDE <a href="#CMDTBLS">CMDTBLS</a>,,2
-                    018             INCLUDE <a href="#FDOSENT">FDOSENT</a>,,2
-                    019             INCLUDE <a href="#FOPCLRW">FOPCLRW</a>,,2
-                    020             INCLUDE <a href="#FDELCAT">FDELCAT</a>,,2
-                    021             INCLUDE <a href="#FMTRWIO">FMTRWIO</a>,,2
-                    022             INCLUDE <a href="#FLOCNXB">FLOCNXB</a>,,2
-                    023             INCLUDE <a href="#FLOCSEC">FLOCSEC</a>,,2
-                    024             INCLUDE <a href="#FVCBUFS">FVCBUFS</a>,,2
-                    025             INLUCDE <a href="#BOOTLDR">BOOTLDR</a>,,2                              ; $3600 .. $36FF
-                    026             INCLUDE <a href="#COREQUS">COREQUS</a>,,1
-                    027             INCLUDE <a href="#PRENIBL">PRENIBL</a>,,1
-                    028             INCLUDE <a href="#WRITRTN">WRITRTN</a>,,1
-                    029             INCLUDE <a href="#POSTNRD">POSTNRD</a>,,1
-                    030             INCLDUE <a href="#RDADSEK">RDADSEK</a>,,1
-                    031             INCLUDE <a href="#MSWAITR">MSWAITR</a>,,1                              ; $3A00 .. $3Cxx, T0$4 - T0$6
-                    032             INCLUDE <a href="#WRITADR">WRITADR</a>,,1
-                    033             INCLUDE <a href="#RWTSONE">RWTSONE</a>,,1
-                    034             INCLUDE <a href="#RWTSTWO">RWTSTWO</a>,,1
-                    035             INCLUDE <a href="#FORMATR">FORMATR</a>,,1       ; $3EAF .. $3FC7
-                    036             INCLUDE <a href="#DOSPTCH">DOSPTCH</a>,,1       ; $3FC8 .. $3FFF
+                    008             INCLUDE <a class="file" href="#RELOCTR">RELOCTR</a>,,2                              ; $1B00 .. $####
+                    009             INCLUDE <a class="file" href="#DOSINIT">DOSINIT</a>,,2                              ; $#### .. $####
+                    010             INCLUDE <a class="file" href="#DOSHOOK">DOSHOOK</a>,,2                              ; $#### .. $####
+                    011             INCLUDE <a class="file" href="#CMDSCAN">CMDSCAN</a>,,2                              ; $#### .. $####
+                    012             INCLUDE <a class="file" href="#XOPNCLS">XOPNCLS</a>,,2                              ; $#### .. $####
+                    013             INCLUDE <a class="file" href="#XLODSAV">XLODSAV</a>,,2                              ; $#### .. $####
+                    014             INCLUDE <a class="file" href="#XMISCMD">XMISCMD</a>,,2
+                    015             INCLUDE <a class="file" href="#DOSGOER">DOSGOER</a>,,2
+                    016             INCLUDE <a class="file" href="#BLDFTAB">BLDFTAB</a>,,2                              ; Page   4, Lines 144, $#### .. $####
+                    017             INCLUDE <a class="file" href="#CMDTBLS">CMDTBLS</a>,,2
+                    018             INCLUDE <a class="file" href="#FDOSENT">FDOSENT</a>,,2
+                    019             INCLUDE <a class="file" href="#FOPCLRW">FOPCLRW</a>,,2
+                    020             INCLUDE <a class="file" href="#FDELCAT">FDELCAT</a>,,2
+                    021             INCLUDE <a class="file" href="#FMTRWIO">FMTRWIO</a>,,2
+                    022             INCLUDE <a class="file" href="#FLOCNXB">FLOCNXB</a>,,2
+                    023             INCLUDE <a class="file" href="#FLOCSEC">FLOCSEC</a>,,2
+                    024             INCLUDE <a class="file" href="#FVCBUFS">FVCBUFS</a>,,2
+                    025             INLUCDE <a class="file" href="#BOOTLDR">BOOTLDR</a>,,2                              ; $3600 .. $36FF
+                    026             INCLUDE <a class="file" href="#COREQUS">COREQUS</a>,,1
+                    027             INCLUDE <a class="file" href="#PRENIBL">PRENIBL</a>,,1
+                    028             INCLUDE <a class="file" href="#WRITRTN">WRITRTN</a>,,1
+                    029             INCLUDE <a class="file" href="#POSTNRD">POSTNRD</a>,,1
+                    030             INCLDUE <a class="file" href="#RDADSEK">RDADSEK</a>,,1
+                    031             INCLUDE <a class="file" href="#MSWAITR">MSWAITR</a>,,1                              ; $3A00 .. $3Cxx, T0$4 - T0$6
+                    032             INCLUDE <a class="file" href="#WRITADR">WRITADR</a>,,1
+                    033             INCLUDE <a class="file" href="#RWTSONE">RWTSONE</a>,,1
+                    034             INCLUDE <a class="file" href="#RWTSTWO">RWTSTWO</a>,,1
+                    035             INCLUDE <a class="file" href="#FORMATR">FORMATR</a>,,1       ; $3EAF .. $3FC7
+                    036             INCLUDE <a class="file" href="#DOSPTCH">DOSPTCH</a>,,1       ; $3FC8 .. $3FFF
 
 
 <hr>; === <a class="file" name="RELOCTR">RELOCTR</a> - Relocate DOS to high (48K) memory, Page <span class="page">110</span>, <b class="ts">T0$A</b>, $<span class="adr">1B00</span> ===<hr>
