--- a/dos33.html
+++ b/dos33.html
@@ -323,13 +323,14 @@ The <span class="i">intent</span> of providing this copyrighted source code is
 Numerous improvements have been made over the original source code listings:
 <p>
 <ul>
-  <li>Hyperlinks to all labels,                                       </li>
+  <li>Hyperlinks to all function labels (blue),                       </li>
+  <li>Hyperlinks to all variable labels (green),                      </li>
   <li>Load address and opcodes,                                       </li>
   <li>Added line numbers,                                             </li>
   <li>Cleaned up sloppy vertical alignment (such as (#) clock cycles),</li>
-  <li>Added annotation column,                                        </li>
+  <li>Added annotation commentary column,                             </li>
   <li>Unindented and color-coded macro sections so they stand out, and</li>
-  <li>Single page                                                     </li>
+  <li>Entire listing is now a single continuous page                  </li>
 </ul>
 <p>
 
