Updated stats for funcs and vars

--- a/dos33.html
+++ b/dos33.html
@@ -2344,9 +2344,9 @@ TODO:
 <p>
 Spelling mistakes: 5
 <p>
-Total Functions: 67
+Total Functions: 90
 <p>
-Total Variables: ?
+Total Variables: 86
 <p>
 
 <h1>Symbols (Alphabetical)</h1>
