Fixed template for func definition

--- a/dos33.html
+++ b/dos33.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 <span class="todo">TODO</span> add fixed header on scroll for filenames
-<a name="BEGIN"      id="BEGIN"      >BEGIN       </a>
+<a class="f" name="CORRECTVOL" id="CORRECTVOL" >CORRECTVOL  </a>
                         25          37              53                              85  89  93
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
 Page
