--- a/dos33.html
+++ b/dos33.html
@@ -4,17 +4,17 @@
 <a class="f" name="CORRECTVOL" id="CORRECTVOL" >CORRECTVOL  </a>
                         25          37              53                              85  89  93
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
-Page
+Pages done:
      10  20  30  40  50  60  70  80  90 100 110 120 130 140 150
   1  11  21  31  41  51  61  71  81  91 101 111 121 131 141 151
   2  12  22  32  42  52  62  72  82  92 102 112 122 132 142 152
   3  13  23  33  43  53  63  73  83  93 103 113 123 133 143 153
   4  14  24  34  44  54  64  74  84  94 104 114 124 134 144 154
-  5  15  25  35  45  55  65  75  85  95 105 115 125 135 145 155
-  6  16  26  36  46  56  66  76  86  96 106 116 126 136 146 156
-  7  17  27  37  47  57  67  77  87  97 107 117 127 137 147 157
-  8  18  28  38  48  58  68  78  88  98 108 118 128 138 148 158
-  9  19  29  39  49  59  69  79  89  99 109 119 129 139 149 159
+  5  15  25  35  45  55  65  75  85  95 105 115 125 135 145 n/a
+  6  16  26  36  46  56  66  76  86  96 106 116 126 136 146 n/a
+  7  17  27  37  47  57  67  77  87  97 107 117 127 137 147 n/a
+  8  18  28  38  48  58  68  78  88  98 108 118 128 138 148 n/a
+  9  19  29  39  49  59  69  79  89  99 109 119 129 139 149 n/a
 
                     001 
                     002 
