--- a/dos33.html
+++ b/dos33.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <!--
 <span class="todo">TODO</span> add fixed header on scroll for filenames
+<a class="page" href="#page1"></a>
+=== Page <a class="page" name="page1"></a> ===
 <a class="f" name="CORRECTVOL" id="CORRECTVOL" >CORRECTVOL  </a>
+<a class="f" name="_8"       >12_         </a>
                         25          37              53                              85  89  93
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
 
@@ -497,12 +500,16 @@ a.name {
 }
 
 a.line {
-    background-color:#FF0; /* Yellow = TODO */
+    color: #080;
+    text-decoration: none; /* remove underlink from data link */
 }
 /* Page Definition -- link comes here */
 a.page {
     color: #080;
     text-decoration: none; /* remove underlink from data link */
+}
+a.todo {
+    background-color:#FF0; /* Yellow = TODO */
 }
 /* Track/Sector Definition -- link comes here */
 a.ts {
@@ -790,7 +797,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     100             PAGE
 1B00:4C 84 1D       101 <a class="f" name="BEGIN"   >BEGIN       </a>JMP <a class="x" href="#DBINIT">DBINIT</a>                                      ; === DOS loads @ $1B00 ===
                     102 ;                                                           ; Loaded in at $38D4
-                    103 <a class="f" name="DOSREL"  >DOSREL      </a>EQU *                                           ; Called from BOOTLDR, page 12, line # TODO:
+                    103 <a class="f" name="DOSREL"  >DOSREL      </a>EQU *                                           ; Called from File <a class="file" href="#BOOTLDR">BOOTLDR</a>, Page <a class="page" href="#page12">12</a>, Line #<a class="line" href="#DI3">298</a><!--#BOOTLDR_298-->
                     104 ;
                     105 ; GET RELOCATION PARMS
                     106 ;
@@ -4513,70 +4520,70 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     177 
                     178 
                     179 
-    :00             180 DCBDRV DS 1                 ; DRIVE NUMBER
-    :00             181 DCBVOL DS 1                 ; VOLUME DRIVER
-    :00             182 DCBVTN DS 1                 ; VTOC TRACK NUMBER
+    :00             180 <a class="d" name="DCBDRV"     >DCBDRV      </a>DS 1            ; DRIVE NUMBER
+    :00             181 <a class="d" name="DCBVOL"     >DCBVOL      </a>DS 1            ; VOLUME DRIVER
+    :00             182 <a class="d" name="DCBVTN"     >DCBVTN      </a>DS 1            ; VTOC TRACK NUMBER
                     183 ;
-    :00 00 00       184 DCBSPR DS 3                 ; SPARES
+    :00 00 00       184 <a class="d" name="DCBSPR"     >DCBSPR      </a>DS 3            ; SPARES
                     185 ;
-                    186 DCBLEN EQU *-<a class="v" href="#FCBDCB">FCBDCB</a>         ; DCB LENGTH
-                    187 <a class="d" name="FCBLEN">FCBLEN</a> EQU *-<a class="v" href="#FCB"   >FCB</a>            ; FCB LENGTH
+                    186 <a class="d" name="DCBLEN"     >DCBLEN      </a>EQU *-<a class="v" href="#FCBDCB">FCBDCB</a>    ; DCB LENGTH
+                    187 <a class="d" name="FCBLEN"     >FCBLEN      </a>EQU *-<a class="v" href="#FCB"   >FCB</a>       ; FCB LENGTH
 
 <hr>; === <a class="file" name="BOOTLDR">BOOTLDR</a> - Boot loader, Page <a class="page" name="page8">8</a>, <b class="ts">T0$0</b>, $<span class="adr">B600</span> - $<span class="adr">Bxxx</span> ===<hr>
-                    001 
-                    002 
-                    003 
-                    004 
-                    005 
-                    006 
-                    007 
-                    008 
-                    009 
-                    010 
-                    011 
-                    012 
-                    013 
-                    014 
-                    015 
-                    016 
-                    017 
-                    018 
-                    019 
-                    020 
-                    021 
-                    022 
-                    023 
-                    024 
-                    025 
-                    026 
-                    027 
-                    028 
-                    029 
-                    030 
-                    031 
-                    032 
-                    033 
-                    034 
-                    035 
-                    036 
-                    037 
-                    038 
-                    039 
-                    040 
-                    041 
-                    042 
-                    043 
-                    044 
-                    045 
-                    046 
-                    047 
-                    048 
-                    049 
-                    050 
-                    051 
-                    052 
-                    053 
-                    054 
+                    001             SBTL '16-SECTOR DOS BOOT'
+                    002 <a class="d" name="HERE3L"     id="HERE3L"     >HERE3L      </a>EQU &gt;*
+                    003 <a class="d" name="REMDR3"     id="REMDR3"     >REMDR3      </a>EQU 256-HERE3L                                  ; Remainder 3
+                    004             ORG *+<a class="v" href="#REMDR3">REMDR3</a>
+                    005 <a class="d" name="TRK0LDR"    id="TRK0LDR"    >TRK0LDR     </a>EQU *
+                    006     DO &gt;<a class="v" href="#TRK0LDR">TRK0LDR</a><span class="macro">
+                    007         ??? ;DELIBERATE ERROR IF NOT AT PAGE BOUNDARY       </span>
+                    008     FIN
+                    009 ***************************
+                    010 *                         *
+                    011 * 16-SECTOR DOS BOOTSTRAP *
+                    012 *                         *
+                    013 *     RICK AURICCHIO      *
+                    014 *       10/10/79          *
+                    015 *                         *
+                    016 ***************************
+                    017 *                         *
+                    018 * THIS PROGRAM RESIDES IN *
+                    019 *  TRACK 0,SECTOR 0 OF A  *
+                    020 *  DOS DISKETTE. ITS SOLE *
+                    021 *  PURPOSE IS TO READ THE *
+                    022 *  DOS LOADER PROGRAM IN  *
+                    023 *  FROM TRACK 0, SECTORS  *
+                    024 *  1-9. CONTROL IS THEN   *
+                    025 *  TRANSFERRED TO THAT    *
+                    026 *  PROGRAM.               *
+                    027 *                         *
+                    028 * NOTE: THE DOS LOADER    *
+                    029 *  CONTAINS THE ENTIRE    *
+                    030 *  SET OF 16-SECTOR CORE  *
+                    031 *  ROUTINES; THOSE CORE   *
+                    032 *  ROUTINES ARE USED TO   *
+                    033 *  LOAD THE REST OF THE   *
+                    034 *  DOS IMAGE INTO MEMORY. *
+                    035 *                         *
+                    036 ***************************
+                    037 <a class="d" name="POINTA"   >POINTA      </a>EQU $26         ;BUFFER POINTER
+                    038 <a class="d" name="BSLOT"    >BSLOT       </a>EQU $2B         ;BOOT BSLOT
+                    039 <a class="d" name="BSECTR"   >BSECTR      </a>EQU $3D         ;LAST BSECTR READ
+                    040 <a class="d" name="BTEMP"    >BTEMP       </a>EQU $3E         ;ADDRESS BTEMP
+                    041 <a class="d" name="BRETRY"   >BRETRY      </a>EQU $5C         ;OFFSET TO READER
+                    042 *
+                    043 <a class="f" name="MONINIT"  >MONINIT     </a>EQU $FB2F       ;MONINIT SCREEN
+                    044 <a class="d" name="BHERE3"   >BHERE3      </a>EQU &gt;*
+                    045 <a class="d" name="BOOTCNT"  >BOOTCNT     </a>EQU $800+BHERE3
+                    046             DFB 01                                          ; Number sectors for P6 PROM to read
+                    047             PAGE
+                    048             LDA <a class="d" href="#POINTA">POINTA</a>+1    ;WHERE DID BSECTR GET LOADED?   ; Get memory page of last load
+                    049             CMP #<span class="adr">09</span>         ; (AT 0800)?
+                    050             BNE <a class="x" href="#READNEXT">READNEXT</a>    ;=&gt;NO. WE'RE LOADING SOMETHING
+                    051 * WE'VE BEEN BOOTED. SET UP
+                    052 * PARAMS FOR BOOT PROM SO
+<hr>                    053 * THAT WE'LL READ IN TRACK 0,                               ; === Page <a class="page" name="page9">9</a> ===
+                    054 * BSECTRS 00-09.
                     055 
                     056 
                     057 
@@ -4638,7 +4645,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     113 
                     114 
                     115 
-                    116 
+<hr>                    116             INC <a class="v" href="#CCBRRN">CCBRRN</a>      ;BUMP CCB RECORD NUMBER         ; === Page <a class="page" name="page10">10</a>
                     117 
                     118 
                     119 
@@ -4701,7 +4708,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     176 
                     177 
                     178 
-                    179 
+<hr>                    179             TSX                                             ; === Page <a class="page" name="page11">11</a> ===
                     180 
                     181 
                     182 
@@ -4722,7 +4729,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     197 
                     198 
                     199 
-
                     200 
                     201 
                     202 
@@ -4764,8 +4770,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     238 
                     239 
                     240 
-                    241 
-                    242 
+                    241 BHERE4      EQU &gt;*
+<hr>                    242 LOADADDR    EQU $800+BHERE4                                 ; === Page <a class="page" name="page12">12</a> ===
                     243 
                     244 
                     245 
@@ -4821,13 +4827,12 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     295 
                     296 
                     297 
-                    298 
-                    299 
-
+                    298 <a class="f" name="DI3"      >DI3         </a>JMP <a class="x" href="#DOSREL">DOSREL</a>      ; GO TO POST INIT ROUTINE       ; Relocate DOS to high mem
+                    299             PAGE
                     300 
                     301 
                     302 
-                    303 
+                    303             SBC IBBUFP+1
                     304 
                     305 
                     306 
